[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/gauge.png" type="Texture" id=1]
[ext_resource path="res://assets/needle.png" type="Texture" id=2]
[ext_resource path="res://player/gui.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/kenney-future-narrow.ttf" type="DynamicFontData" id=4]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.576471, 0.576471, 0.576471, 0.392157 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 4 )

[node name="GUIContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
material = SubResource( 3 )
margin_top = 432.0
margin_right = 318.0
margin_bottom = 560.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPMGauge" type="TextureRect" parent="HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="RPMNeedle" type="TextureRect" parent="HBoxContainer/RPMGauge"]
margin_left = 54.0
margin_top = 11.0
margin_right = 72.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 9, 50 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer/RPMGauge"]
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.8
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPMLabel" type="Label" parent="HBoxContainer/RPMGauge/Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.6
size_flags_vertical = 1
custom_colors/font_color = Color( 0.282353, 0.0196078, 0.0196078, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedGauge" type="TextureRect" parent="HBoxContainer"]
margin_left = 148.0
margin_right = 276.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="SpeedNeedle" type="TextureRect" parent="HBoxContainer/SpeedGauge"]
margin_left = 54.0
margin_top = 11.0
margin_right = 72.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 9, 50 )
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer/SpeedGauge"]
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.8
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="HBoxContainer/SpeedGauge/Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.6
size_flags_vertical = 1
custom_colors/font_color = Color( 0.282353, 0.0196078, 0.0196078, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GearLabel" type="Label" parent="HBoxContainer"]
margin_left = 296.0
margin_top = 37.0
margin_right = 318.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.282353, 0.0196078, 0.0196078, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
